# defect-triage-env

./: =0.2.0  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: environment.py  graders.py  models.py  tasks.py
manufacturing_defect_triage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: app.py
tests/: test_env.py
