[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manufacturing-defect-triage"
version = "1.0.0"
description = "An RL environment where an agent triages manufacturing defects on a production line."
requires-python = ">=3.11,<3.13"
dependencies = [
    "openenv-core==0.2.3",
    "openai>=2.7.2",
    "pydantic>=2.7,<3.0",
    "numpy>=1.26,<2.0",
    "scipy>=1.13,<2.0",
    "fastapi>=0.115.2",
    "uvicorn[standard]>=0.35.0",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "huggingface_hub>=0.25.1"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["env*","server*"]

[tool.openenv]
name = "manufacturing-defect-triage"
version = "1.0.0"
entry_point = "server.app:main"

[tool.uv.extra-build-dependencies]
manufacturing-defect-triage = ["setuptools"]